k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:
      labels:
        app: devops-app
    spec:
      containers:
      - name: devops-app
        image: wahed1321/calculator-app:latest
        ports:
        - containerPort: 5000
          
        resources:
            requests:
              memory: "128Mi"
               cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "500m"
