k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: devops-service
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 5000
